<resources>
    <string name="app_name">TinderGathering</string>
    <string name="nav_swipe">Swipe</string>
    <string name="title_swipe">Tinder : The Gathering</string>
    <string name="title_matchs">Matchs</string>
    <string name="title_profile">Profil</string>
    <string name="title_edit_profile">Modifier mon profil</string>
    <string name="title_login">Connexion</string>
    <string name="title_registration">Inscription</string>
<!--    <string name="url_start">http://appandroid.vqkxiaz.cluster023.hosting.ovh.net/</string>-->
    <string name="url_start">http://localhost/</string>

    <!-- Strings des layout login et registration -->
    <string name="pseudo">Pseudo</string>
    <string name="password">Mot de passe</string>
    <string name="password_confirm">Confirmation mot de passe</string>
    <string name="login_button">Valider</string>
    <string name="registration_button">Valider</string>
    <string name="mail">E-mail</string>
    <string name="name">Nom</string>
    <string name="fisrtname">Prénom</string>
    <string name="description">Description</string>
    <string name="formats">Formats</string>
    <string name="standard">Standard</string>
    <string name="commander">Commander</string>
    <string name="pioneer">Pioneer</string>
    <string name="brawl">Brawl</string>
    <string name="vintage">Vintage</string>
    <string name="birthdate">Date de naissance</string>
    <string name="AuthToken" />

</resources>