<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_login" />

    <item
        android:id="@+id/navigation_registration"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_registration" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_matchs"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_matchs" />
</menu>