<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_profile">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tindergathering.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.tindergathering.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_matchs"
        android:name="com.example.tindergathering.ui.matchs.MatchsFragment"
        android:label="@string/title_matchs"
        tools:layout="@layout/fragment_matchs" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.tindergathering.ui.login.LoginFragment"
        android:label="@string/title_login" />
    <fragment
        android:id="@+id/navigation_registration"
        android:name="com.example.tindergathering.ui.Registration.RegistrationFragment"
        android:label="@string/title_registration" />
</navigation>