<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.matchs.MatchsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-77dp"
                android:layout_marginTop="12dp"
                android:text="@string/mail"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-48dp"
                android:layout_marginTop="16dp"
                android:text="@string/password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="12dp"
                android:text="@string/password_confirm"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-82dp"
                android:layout_marginTop="12dp"
                android:text="@string/name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-70dp"
                android:layout_marginTop="8dp"
                android:text="@string/fisrtname"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textview8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-28dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="5dp"
                android:text="@string/birthdate"
                android:textSize="18sp" />

            <DatePicker
                android:id="@+id/birthdate"
                style="@android:style/Widget.DatePicker"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:calendarTextColor="@color/colorPrimary"
                android:dayOfWeekBackground="@color/colorPrimary"
                android:headerBackground="@color/colorPrimary"
                android:yearListSelectorColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-60dp"
                android:layout_marginTop="8dp"
                android:text="@string/description"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/Formats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-68dp"
                android:layout_marginTop="8dp"
                android:text="@string/formats"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/standard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-60dp"
                android:text="@string/standard"
                android:buttonTint="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/commander"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-49dp"
                android:text="@string/commander"
                android:buttonTint="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/brawl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-72dp"
                android:text="@string/brawl"
                android:buttonTint="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/pioneer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-65dp"
                android:text="@string/pioneer"
                android:buttonTint="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/vintage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-65dp"
                android:text="@string/vintage"
                android:buttonTint="@color/colorPrimary" />

            <Button
                android:id="@+id/edit_profile_button"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="70dp"
                android:backgroundTint="@color/colorPrimary"
                android:paddingStart="90dp"
                android:paddingEnd="90dp"
                android:text="@string/registration_button"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>